updated mosip-launcher and helm charts to work with latest repository structure

--- a/helm-charts/mosip-init/templates/deployment-and-service.yaml
+++ b/helm-charts/mosip-init/templates/deployment-and-service.yaml
@@ -17,6 +17,9 @@ spec:
     metadata:
       labels:
         app: {{ $serviceName }}
+        {{- if .component}}
+        component: service-hazelcast-server
+        {{- end }}
     spec:
       {{- if not .noInitContainer}}
       initContainers:
