--- a/helm-charts/mosip-init/templates/deployment.yaml
+++ b/helm-charts/mosip-init/templates/deployment.yaml
@@ -17,6 +17,9 @@ spec:
     metadata:
       labels:
         app: {{ $deploymentName }}
+        {{- if .component}}
+        component: service-hazelcast-server
+        {{- end }}
     spec:
       initContainers:
       - name: config-server-availability-check
