--- a/mosip-launcher/ansible-playbooks/setup-deployments/setup-k8-cluster/setup.yml
+++ b/mosip-launcher/ansible-playbooks/setup-deployments/setup-k8-cluster/setup.yml
@@ -5,7 +5,7 @@
   gather_facts: false
   pre_tasks:
     - pause:
-        prompt: "What is the name of your application?"
+        prompt: "What is the name of your application? (Keep Application name to a maximum of 14 characters length, comprising only of uppercase, lowercase alphabets (a-z, A-Z) and hiphen (-), or it can show unexpected results in later parts)"
       register: application
       when: application_name is not defined
 
@@ -28,7 +28,7 @@
   vars:
 
   tasks:
-    - name: Make application name persistant
+    - name: Make application name persistent
       set_fact:
         application_name: "{{ hostvars['localhost']['application']['user_input'] }}"
       when: application_name is not defined
@@ -38,17 +38,17 @@
           file: ../../configurations/common-configurations.yml
           name: common
 
-    - name: Make jenkins_url persistant
+    - name: Make jenkins_url persistent
       set_fact:
           jenkins_url: "{{ hostvars['localhost']['jenkins_address']['user_input'] }}"
       when: devops_cluster_dns is not defined and jenkins_url is not defined
 
-    - name: Make jenkins_username persistant
+    - name: Make jenkins_username persistent
       set_fact:
           jenkins_username: "{{ hostvars['localhost']['jenkins_uname']['user_input'] }}"
       when: jenkins_username is not defined
 
-    - name: Make jenkins_password persistant
+    - name: Make jenkins_password persistent
       set_fact:
           jenkins_password: "{{ hostvars['localhost']['jenkins_pass']['user_input'] }}"
       when: jenkins_password is not defined
