--- a/mosip-launcher/ansible-playbooks/configurations/common-configurations.template
+++ b/mosip-launcher/ansible-playbooks/configurations/common-configurations.template
@@ -5,6 +5,6 @@ client_secret: <your_client_secret>
 subscription_id: <your_subscription_id>
 tenant_id: <your_tenant_id>
 
-# use only letters in environment names 
+# Keep Environment name to a maximum of 6 characters length, comprising only of uppercase and lowercase alphabets (a-z, A-Z), or it can show unexpected results in later parts
 environments:
     - dev
