--- a/mosip-launcher/ansible-playbooks/generate-information-file/generate-information.yml
+++ b/mosip-launcher/ansible-playbooks/generate-information-file/generate-information.yml
@@ -8,128 +8,128 @@
 
   tasks:
 
-    - name: Make Jenkins URL persistant
+    - name: Make Jenkins URL persistent
       set_fact:
         jenkins_url: "{{ devops_cluster_dns }}/jenkins"
       when: devops_cluster_dns is defined
 
-    - name: Make Jenkins URL persistant
+    - name: Make Jenkins URL persistent
       set_fact:
         jenkins_url: "{{ jenkins_url }}"
       when: jenkins_url is defined
 
-    - name: Make Jenkins URL persistant
+    - name: Make Jenkins URL persistent
       set_fact:
         jenkins_url: "<not generated in the current run>"
       when: jenkins_url is not defined and devops_cluster_dns is not defined
 
-    - name: Make Jenkins username persistant
+    - name: Make Jenkins username persistent
       set_fact:
         jenkins_username: "{{ jenkins_username }}"
       when: jenkins_username is defined and jenkins_url is defined
 
-    - name: Make Jenkins username persistant
+    - name: Make Jenkins username persistent
       set_fact:
         jenkins_username: "<not generated in the current run>"
       when: jenkins_username is not defined
 
-    - name: Make Jenkins password persistant
+    - name: Make Jenkins password persistent
       set_fact:
         jenkins_passowrd: "{{ jenkins_password }}"
       when: jenkins_passowrd is defined and jenkins_url is defined
 
-    - name: Make Jenkins password persistant
+    - name: Make Jenkins password persistent
       set_fact:
         jenkins_passowrd: "<not generated in the current run>"
       when: jenkins_password is not defined
 
 ####################################
 
-    - name: Make Docker registry URL persistant
+    - name: Make Docker registry URL persistent
       set_fact:
         docker_registry_url: "{{ devops_cluster_dns }}"
       when: devops_cluster_dns is defined
 
-    - name: Make Docker registry URL persistant
+    - name: Make Docker registry URL persistent
       set_fact:
         docker_registry_url: "{{ docker_registry_url }}"
       when: docker_registry_url is defined
 
-    - name: Make Docker registry URL persistant
+    - name: Make Docker registry URL persistent
       set_fact:
         docker_registry_url: "<not generated in the current run>"
       when: docker_registry_url is not defined and devops_cluster_dns is not defined
 
-    - name: Make Docker registry username persistant
+    - name: Make Docker registry username persistent
       set_fact:
         docker_registry_username: "{{ docker_registry_username }}"
       when: docker_registry_username is defined and docker_registry_url is defined
 
-    - name: Make Docker registry username persistant
+    - name: Make Docker registry username persistent
       set_fact:
         docker_registry_username: "<not generated in the current run>"
       when: docker_registry_username is not defined
 
-    - name: Make Docker registry password persistant
+    - name: Make Docker registry password persistent
       set_fact:
         docker_registry_password: "{{ docker_registry_password }}"
       when: docker_registry_password is defined and docker_registry_url is defined
 
-    - name: Make Docker registry password persistant
+    - name: Make Docker registry password persistent
       set_fact:
         docker_registry_password: "<not generated in the current run>"
       when: docker_registry_password is not defined
 
 ####################################
 
-    - name: Make Jfrog URL persistant
+    - name: Make Jfrog URL persistent
       set_fact:
         jfrog_url: "{{ devops_cluster_dns }}/artifactory"
       when: devops_cluster_dns is defined
 
-    - name: Make Jfrog URL persistant
+    - name: Make Jfrog URL persistent
       set_fact:
         jfrog_url: "<not generated in the current run>"
       when: devops_cluster_dns is not defined
 
-    - name: Make Jfrog username persistant
+    - name: Make Jfrog username persistent
       set_fact:
         jfrog_username: "{{ jfrog_username }}"
       when: jfrog_username is defined and jfrog_url is defined
 
-    - name: Make Jfrog username persistant
+    - name: Make Jfrog username persistent
       set_fact:
         jfrog_username: "<not generated in the current run>"
       when: jfrog_username is not defined
 
-    - name: Make Jfrog password persistant
+    - name: Make Jfrog password persistent
       set_fact:
         jfrog_password: "{{ jfrog_password }}"
       when: jfrog_password is defined and jfrog_url is defined
 
-    - name: Make Jfrog password persistant
+    - name: Make Jfrog password persistent
       set_fact:
         jfrog_password: "<not generated in the current run>"
       when: jfrog_password is not defined
 
 ####################################
 
-    - name: Make Devops cluster DNS persistant
+    - name: Make Devops cluster DNS persistent
       set_fact:
         devops_cluster_dns: "{{ devops_cluster_dns }}"
       when: devops_cluster_dns is defined
 
-    - name: Make Devops cluster config location persistant
+    - name: Make Devops cluster config location persistent
       set_fact:
         devops_cluster_config_location: "~/k8_devops_config.yaml"
       when: devops_cluster_dns is defined
       
-    - name: Make Devops cluster config location persistant
+    - name: Make Devops cluster config location persistent
       set_fact:
         devops_cluster_config_location: "<not generated in the current run>"
       when: devops_cluster_dns is not defined
 
-    - name: Make Devops cluster DNS persistant
+    - name: Make Devops cluster DNS persistent
       set_fact:
         devops_cluster_dns: "<not generated in the current run>"
       when: devops_cluster_dns is not defined
@@ -152,3 +152,16 @@
       loop: "{{ common.environments }}"
       loop_control:
         loop_var: env_name
+        
+    - name: Success!!!
+      debug:
+        msg:
+          - "The Setup is Successful"
+          - "********************************************************************"
+          - "Look for the following files generated for more info :"
+          - "/usr/local/devops-box-information.txt"
+          - "/usr/local/deployments-box-information-env-name.txt"
+          - "********************************************************************"
+          - "********************************************************************"
+          - "Please make sure to run init-all-modules created in your jenkins instance for once for deploying all the MOSIP related deployments."
+          - "Note Initializing init job for the first time might take some time since it will pull and build slave jenkins image."
