--- a/mosip-launcher/ansible-playbooks/setup-configuration-for-config-server-and-helm-charts/setup.yml
+++ b/mosip-launcher/ansible-playbooks/setup-configuration-for-config-server-and-helm-charts/setup.yml
@@ -6,16 +6,16 @@
 
   pre_tasks:
   - pause:
-      prompt: "What is the name of your application?"
+      prompt: "What is the name of your application? (Keep Application name to a maximum of 14 characters length, comprising only of uppercase, lowercase alphabets (a-z, A-Z) and hiphen (-), or it can show unexpected results in later parts)"
     register: application
     when: application_name is not defined
 
   - pause:
-      prompt: "Enter SCM repository ssh url, which contains configuration files and config-templates folder in same branch name as that of MOSIP code"
+      prompt: "Enter SCM repository ssh url, which contains configuration files and config-templates folder in same branch name as that of MOSIP code (mosip-config repo ssh url)"
     register: scm_config_repo_url
 
   - pause:
-      prompt: "Enter SCM repository branch, which contains configuration template files. Should be same as code branch"
+      prompt: "Enter SCM repository branch, which contains configuration template files. Should be same as code branch (mosip-config branch)"
     register: scm_config_branch
     when: scm_branch is not defined
 
@@ -52,51 +52,51 @@
 
   tasks:
 
-    - name: Make jenkins_url persistant
+    - name: Make jenkins_url persistent
       set_fact:
           jenkins_url: "{{ hostvars['localhost']['jenkins_address']['user_input'] }}"
       when: devops_cluster_dns is not defined and jenkins_url is not defined
   
-    - name: Make SCM branch  persistant
+    - name: Make SCM branch  persistent
       set_fact:
           scm_branch: "{{ hostvars['localhost']['scm_config_branch']['user_input'] }}"
       when: scm_branch is not defined
 
-    - name: Make SCM config url  persistant
+    - name: Make SCM config url  persistent
       set_fact:
           scm_config_repo_url: "{{ hostvars['localhost']['scm_config_repo_url']['user_input'] }}"
 
-    - name: Make docker registry url persistant
+    - name: Make docker registry url persistent
       set_fact:
           docker_registry_url: "{{ hostvars['localhost']['docker_registry_address']['user_input'] }}"
       when: devops_cluster_dns is not defined and docker_registry_url is not defined
   
-    - name: Make docker registry url persistant
+    - name: Make docker registry url persistent
       set_fact:
           docker_registry_url: "{{ hostvars['localhost']['devops_cluster_dns'] | replace('https://','') }}"
       when: devops_cluster_dns is defined
 
-    - name: Make jenkins_username persistant
+    - name: Make jenkins_username persistent
       set_fact:
           jenkins_username: "{{ hostvars['localhost']['jenkins_uname']['user_input'] }}"
       when: jenkins_username is not defined
 
-    - name: Make jenkins_password persistant
+    - name: Make jenkins_password persistent
       set_fact:
           jenkins_password: "{{ hostvars['localhost']['jenkins_pass']['user_input'] }}"
       when: jenkins_password is not defined
 
-    - name: Make docker registry username persistant
+    - name: Make docker registry username persistent
       set_fact:
           docker_registry_username: "{{ hostvars['localhost']['docker_registry_user']['user_input'] }}"
       when: docker_registry_username is not defined
 
-    - name: Make docker registry password persistant
+    - name: Make docker registry password persistent
       set_fact:
           docker_registry_password: "{{ hostvars['localhost']['docker_registry_pass']['user_input'] }}"
       when: docker_registry_password is not defined
 
-    - name: Make application name persistant
+    - name: Make application name persistent
       set_fact:
         application_name: "{{ hostvars['localhost']['application']['user_input'] }}"
       when: application_name is not defined
