--- a/mosip-launcher/ansible-playbooks/setup-deployments/setup-deployment-jobs/setup-init-modules-job.yml
+++ b/mosip-launcher/ansible-playbooks/setup-deployments/setup-deployment-jobs/setup-init-modules-job.yml
@@ -25,6 +25,19 @@
     register: scm_creds
     when: scm_credentials is not defined
 
+  - pause:
+      prompt: "Enter SCM repository ssh url containing jenkins scripts for MOSIP (mosip-infra repo ssh url)"
+    register: scm_infra_repo
+
+  - pause:
+      prompt: "Enter SCM branch containing jenkins scripts for MOSIP (mosip-infra repo branch)"
+    register: scm_infra_br
+
+  - pause:
+      prompt: "Enter SCM repository ssh url containing reference implementation code for MOSIP (mosip-ref-impl repo ssh url)"
+    register: scm_reference_impl_repo
+
+
  
   tasks:
 
@@ -32,10 +45,23 @@
       set_fact:
         environments: "{{ common.environments }}"
 
-    - name: Make scm credentials persistant
+    - name: Make scm credentials persistent
       set_fact:
         scm_credentials: "{{ hostvars['localhost']['scm_creds']['user_input'] }}"
       when: scm_credentials is not defined
+
+    - name: Make scm infra repo ssh url persistent
+      set_fact:
+        scm_infra_repository: "{{ hostvars['localhost']['scm_infra_repo']['user_input'] }}"
+
+    - name: Make scm infra branch persistent
+      set_fact:
+        scm_infra_branch: "{{ hostvars['localhost']['scm_infra_br']['user_input'] }}"
+
+    - name: Make scm reference implementation repo  persistent
+      set_fact:
+        scm_reference_impl_repository: "{{ hostvars['localhost']['scm_reference_impl_repo']['user_input'] }}"
+
 
     - name: Creating init job config xml from template
       template:
@@ -57,19 +83,19 @@
         password: "{{ hostvars['localhost']['jenkins_password'] }}"
       when: devops_cluster_dns is defined and jenkins_username is defined and jenkins_password is defined
 
-    - name: Make jenkins_url persistant
+    - name: Make jenkins_url persistent
       set_fact:
           jenkins_url: "{{ hostvars['localhost']['jenkins_address']['user_input'] }}"
       when: devops_cluster_dns is not defined and jenkins_url is not defined
 
-    - name: Make jenkins_username persistant
+    - name: Make jenkins_username persistent
       set_fact:
           jenkins_username: "{{ hostvars['localhost']['jenkins_uname']['user_input'] }}"
       when: jenkins_username is not defined
 
-    - name: Make jenkins_password persistant
+    - name: Make jenkins_password persistent
       set_fact:
-          jenkins_username: "{{ hostvars['localhost']['jenkins_pass']['user_input'] }}"
+          jenkins_password: "{{ hostvars['localhost']['jenkins_pass']['user_input'] }}"
       when: jenkins_password is not defined
 
     - name: Creating the Jenkins job for initializing the modules
