--- a/mosip-launcher/ansible-playbooks/setup-deployments/setup-resource-group/setup.yml
+++ b/mosip-launcher/ansible-playbooks/setup-deployments/setup-resource-group/setup.yml
@@ -5,7 +5,7 @@
   gather_facts: false
   pre_tasks:
     - pause:
-        prompt: "What is the name of your application?"
+        prompt: "What is the name of your application? (Keep Application name to a maximum of 14 characters length, comprising only of uppercase, lowercase alphabets (a-z, A-Z) and hiphen (-), or it can show unexpected results in later parts)"
       register: application
       when: application_name is not defined
 
@@ -15,7 +15,7 @@
 
   tasks:
 
-    - name: Make application name persistant
+    - name: Make application name persistent
       set_fact:
         application_name: "{{ hostvars['localhost']['application']['user_input'] }}"
       when: application_name is not defined
