--- a/mosip-launcher/ansible-playbooks/setup-workstation/setup-workstation.yml
+++ b/mosip-launcher/ansible-playbooks/setup-workstation/setup-workstation.yml
@@ -5,13 +5,13 @@
   gather_facts: false
   vars_prompt:
       - name: "application_name"
-        prompt: "What is the name of your application?"
+        prompt: "What is the name of your application? (Keep Application name to a maximum of 14 characters length, comprising only of uppercase, lowercase alphabets (a-z, A-Z) and hiphen (-), or it can show unexpected results in later parts)"
         default: mosip-launcher
         private: no
 
   tasks:
 
-  - name: Make vars persistant
+  - name: Make vars persistent
     set_fact:
       application_name: "{{ application_name }}"
 
