Reg Proc properties updated.

--- a/deployment/developer/config_server/mosip_configs/application.properties
+++ b/deployment/developer/config_server/mosip_configs/application.properties
@@ -263,9 +263,9 @@ mosip.kernel.licensekey.permissions=OTP Trigger,OTP Authentication,Demo Authenti
 
 #-----------------------------Virus Scanner--------------------------------------
 #Virus Scanner server url
-mosip.kernel.virus-scanner.host=<IP>
+mosip.kernel.virus-scanner.host=localhost
 #Virus Scanner server port
-mosip.kernel.virus-scanner.port=<PORT>
+mosip.kernel.virus-scanner.port=3310
 
 
 
@@ -273,9 +273,9 @@ mosip.kernel.virus-scanner.port=<PORT>
 # Name node url for HDFS - Non Secured
 #mosip.kernel.fsadapter.hdfs.name-node-url=hdfs://<IP>:<PORT>
 # Name node url for HDFS - Secured (auth enabled)
-mosip.kernel.fsadapter.hdfs.name-node-url=hdfs://<IP>:<PORT>
+mosip.kernel.fsadapter.hdfs.name-node-url=hdfs://localhost:50070
 # Enable if hadoop security authorization is 'true', default is false
-mosip.kernel.fsadapter.hdfs.authentication-enabled=true
+mosip.kernel.fsadapter.hdfs.authentication-enabled=false
 # HDFS log level. Change this to debug to see hdfs logs
 logging.level.org.apache.hadoop=warn
 # If HDFS is security is configured with Kerberos, Key Distribution Center domain
