--- a/deployment/developer/config_server/mosip_configs/registration-processor.properties
+++ b/deployment/developer/config_server/mosip_configs/registration-processor.properties
@@ -1,8 +1,8 @@
 # Database Host name
-mosip.registration.processor.database.hostname=<IP>
+mosip.registration.processor.database.hostname=localhost
 
 # Database Port
-mosip.registration.processor.database.port=<PASSWORD>
+mosip.registration.processor.database.port=5432
 
 #-----------Health checker--------------
 management.endpoint.health.show-details=always
@@ -39,7 +39,7 @@ javax.persistence.jdbc.url=jdbc:postgresql://${mosip.registration.processor.data
 javax.persistence.jdbc.user=regprcuser
 
 #DB password
-javax.persistence.jdbc.password=<PASSWORD>
+javax.persistence.jdbc.password=Mosip@dev123
 
 #Hibernate properties
 hibernate.hbm2ddl.auto=update
@@ -241,9 +241,9 @@ registration.processor.id.repo.vidVersion=v1
 #Virus scanner packet extension
 registration.processor.packet.ext=.zip
 #Virus scanner server host
-mosip.kernel.virus-scanner.host=<IP>
+mosip.kernel.virus-scanner.host=localhost
 #Virus scanner port
-mosip.kernel.virus-scanner.port=<PORT>
+mosip.kernel.virus-scanner.port=3310
 #Virus scanner application request id
 registration.processor.application.id=REGISTRATION
 registration.processor.rid.machineidsubstring=10
