Reg Proc changes. WIP.

--- a/deployment/developer/config_server/mosip_configs/application.properties
+++ b/deployment/developer/config_server/mosip_configs/application.properties
@@ -215,9 +215,10 @@ mosip.kernel.keygenerator.asymmetric-algorithm-name=RSA
 #Encrypted data and encrypted symmetric key separator
 mosip.kernel.data-key-splitter=#KEY_SPLITTER#
 
-mosip.kernel.keymanager-service-publickey-url=${mosip.base.url}/v1/keymanager/publickey/{applicationId}
-mosip.kernel.keymanager-service-decrypt-url=${mosip.base.url}/v1/keymanager/decrypt
-mosip.kernel.keymanager-service-sign-url=${mosip.base.url}/v1/keymanager/sign
+KEY_BASE=http://localhost:8188
+mosip.kernel.keymanager-service-publickey-url=${KEY_BASE}/v1/keymanager/publickey/{applicationId}
+mosip.kernel.keymanager-service-decrypt-url=${KEY_BASE}/v1/keymanager/decrypt
+mosip.kernel.keymanager-service-sign-url=${KEY_BASE}/v1/keymanager/sign
 mosip.sign.applicationid=KERNEL
 mosip.sign.refid=SIGN
 mosip.kernel.cryptomanager.request_id=CRYPTOMANAGER.REQUEST
