--- a/deployment/developer/config_server/mosip_configs/kernel.properties
+++ b/deployment/developer/config_server/mosip_configs/kernel.properties
@@ -4,7 +4,8 @@ mosip.kernel.database.port=5432
 
 
 #---------------------------------------Sync Data service-------------------------------
-mosip.kernel.syncdata.auth-manager-base-uri=http://<IP>:<PORT>/v1/authmanager
+#mosip.kernel.syncdata.auth-manager-base-uri=http://<IP>:<PORT>/v1/authmanager
+mosip.kernel.syncdata.auth-manager-base-uri=http://localhost:8191/v1/authmanager
 mosip.kernel.syncdata.auth-manager-roles=/roles
 mosip.kernel.syncdata.auth-user-details=/userdetails
 mosip.kernel.syncdata.syncdata-request-id=SYNCDATA.REQUEST
