--- a/deployment/developer/config_server/mosip_configs/registration-processor.properties
+++ b/deployment/developer/config_server/mosip_configs/registration-processor.properties
@@ -48,7 +48,8 @@ hibernate.jdbc.lob.non_contextual_creation=true
 hibernate.show_sql=false
 
 #-----packet-manager----------
-registration.processor.DEV_DIRECTORY = /home/ftp1
+registration.processor.DEV_DIRECTORY=${HOME}/mosip/dmz_packet_store 
+registration.processor.log_directory=${HOME}/mosip/mosip-infra/deployment/developer/launcher/logs
 
 #Location to store all the uploaded file
 registration.processor.ARCHIVE_LOCATION=${registration.processor.DEV_DIRECTORY}/ARCHIVE_PACKET_LOCATION
@@ -90,7 +91,7 @@ token.request.version=1.0
 #Token generation Client Id
 token.request.clientId=regproc_app_user
 #Token generation secret key
-token.request.secretKey=<PASSWORD>
+token.request.secretKey=mosip
 
 #--------Registration processor rest client API's--------------
 
@@ -98,18 +99,21 @@ token.request.secretKey=<PASSWORD>
 mosip.base.url=<BASE_URL>
 
 #Audit Service
-AUDIT=${mosip.base.url}/v1/auditmanager/audits
+AUDIT_BASE=http://localhost:8181
+AUDIT=${AUDIT_BASE}/v1/auditmanager/audits
 
 #Auth Services
-PASSWORDBASEDTOKENAPI=${mosip.base.url}/v1/authmanager/authenticate/useridPwd
-KEYBASEDTOKENAPI=${mosip.base.url}/v1/authmanager/authenticate/clientidsecretkey
+AUTH_BASE=http://localhost:8191
+PASSWORDBASEDTOKENAPI=${AUTH_BASE}/v1/authmanager/authenticate/useridPwd
+KEYBASEDTOKENAPI=${AUTH_BASE}/v1/authmanager/authenticate/clientidsecretkey
 EMAILNOTIFIER=${mosip.base.url}/v1/emailnotifier/email/send
-TOKENVALIDATE=${mosip.base.url}/v1/authmanager/authorize/validateToken
-GETRIDFROMUSERID=${mosip.base.url}/v1/authmanager/rid
+TOKENVALIDATE=${AUTH_BASE}/v1/authmanager/authorize/validateToken
+GETRIDFROMUSERID=${AUTH_BASE}/v1/authmanager/rid
 INTERNALAUTH=${mosip.base.url}/idauthentication/v1/internal/auth
 
 #Master Data Services
-MASTER=${mosip.base.url}/v1/masterdata
+MASTER_BASE=http://localhost:8186
+MASTER=${MASTER_BASE}/v1/masterdata
 MACHINEHISTORY=${MASTER}/machineshistories
 CENTERHISTORY=${MASTER}/registrationcentershistory
 CENTERUSERMACHINEHISTORY=${MASTER}/getregistrationmachineusermappinghistory
@@ -143,18 +147,20 @@ BIODEDUPEINSERT=${mosip.base.url}/abis/v0.1/registration-processor/abis/insert
 BIODEDUPEPOTENTIAL=${mosip.base.url}/abis/v0.1/registration-processor/abis/identity
 
 #Encrypt Services
-ENCRYPTURL=${mosip.base.url}/v1/cryptomanager/encrypt
-ENCRYPTIONSERVICE=${mosip.base.url}/v1/keymanager/publickey
+CRYPTO_BASE=http://localhost:8187
+ENCRYPTURL=${CRYPTO_BASE}/v1/cryptomanager/encrypt
+ENCRYPTIONSERVICE=http://localhost:8188/v1/keymanager/publickey
 
 #Digital Signature Service
-DIGITALSIGNATURE=${mosip.base.url}/v1/signature/sign
+#DIGITALSIGNATURE=${mosip.base.url}/v1/signature/sign
+DIGITALSIGNATURE=http://localhost:8192/v1/signature/sign
 
 #Digital Signature Id
 mosip.registration.processor.digital.signature.id=io.mosip.registration.processor
 
 #--------Registration Processor Rest Client API's-----------
-DMZAUDIT=${mosip.base.url}/v1/auditmanager/audits
-DMZCRYPTOMANAGERDECRYPT=${mosip.base.url}/v1/cryptomanager/decrypt
+DMZAUDIT=${AUDIT_BASE}/v1/auditmanager/audits
+DMZCRYPTOMANAGERDECRYPT=${CRYPTO_BASE}/v1/cryptomanager/decrypt
 
 #External Service
 EISERVICE=${mosip.base.url}/registrationprocessor/v1/eis/registration-processor/external-integration-service/v1.0
@@ -387,4 +393,5 @@ mosip.registration.processor.sms.id=mosip.sms.send
 mosip.registration.processor.email.id=mosip.email.send
 
 #Kernel Crypto signature
-registration.processor.signature.isEnabled=true
+#registration.processor.signature.isEnabled=true
+registration.processor.signature.isEnabled=false
