--- a/deployment/developer/config_server/mosip_configs/registration-processor.properties
+++ b/deployment/developer/config_server/mosip_configs/registration-processor.properties
@@ -85,7 +85,7 @@ token.request.appid=registrationprocessor
 #Token generation username
 token.request.username=registrationprocessor
 #Token generation password
-token.request.password=<PASSWORD>
+token.request.password=mosip
 #Token generation version
 token.request.version=1.0
 #Token generation Client Id
