DB user changed

--- a/deployment/developer/config_server/mosip_configs/registration-processor.properties
+++ b/deployment/developer/config_server/mosip_configs/registration-processor.properties
@@ -36,10 +36,13 @@ javax.persistence.jdbc.driver=org.postgresql.Driver
 javax.persistence.jdbc.url=jdbc:postgresql://${mosip.registration.processor.database.hostname}:${mosip.registration.processor.database.port}/mosip_regprc?currentSchema=regprc
 
 #DB user name
-javax.persistence.jdbc.user=regprcuser
+#TODO: Must revert back to regprcuser
+#javax.persistence.jdbc.user=regprcuser
+javax.persistence.jdbc.user=sysadmin
 
 #DB password
-javax.persistence.jdbc.password=Mosip@dev123
+#javax.persistence.jdbc.password=Mosip@dev123
+javax.persistence.jdbc.password=Mosipadm@dev123
 
 #Hibernate properties
 hibernate.hbm2ddl.auto=update
