--- a/deployment/developer/config_server/mosip_configs/registration-processor.properties
+++ b/deployment/developer/config_server/mosip_configs/registration-processor.properties
@@ -259,9 +259,9 @@ registration.processor.rid.machineidsubstring=10
 
 #---------Packet Uploader Stage------------
 #Packet uploader server host
-registration.processor.dmz.server.host=<IP>
+registration.processor.dmz.server.host=localhost
 #Packet uploader server user
-registration.processor.dmz.server.user=madmin
+registration.processor.dmz.server.user=puneet
 #Packet uploader server port
 registration.processor.dmz.server.port=22
 #Packet uploader server protocol
