key name updated

--- a/deployment/developer/config_server/mosip_configs/registration-processor.properties
+++ b/deployment/developer/config_server/mosip_configs/registration-processor.properties
@@ -64,7 +64,8 @@ registration.processor.PRINT_POSTAL_SERVICE=/home/ftp1/PRINIT_POSTAL_SERVICE
 registration.processor.LANDING_ZONE = ${registration.processor.DEV_DIRECTORY}/LANDING_ZONE
 
 #Get ppk file for connecting vm to store the files in archive location
-registration.processor.vm.ppk=Mosip_Private_key.ppk
+#registration.processor.vm.ppk=Mosip_Private_key.ppk
+registration.processor.vm.ppk=mosipkey
 
 #---------registration-processor-camel-bridge------------
 
