sftp keys added.

--- a/deployment/developer/config_server/mosip_configs/registration-processor.properties
+++ b/deployment/developer/config_server/mosip_configs/registration-processor.properties
@@ -65,7 +65,7 @@ registration.processor.LANDING_ZONE = ${registration.processor.DEV_DIRECTORY}/LA
 
 #Get ppk file for connecting vm to store the files in archive location
 #registration.processor.vm.ppk=Mosip_Private_key.ppk
-registration.processor.vm.ppk=mosipkey
+registration.processor.vm.ppk=sftpkey
 
 #---------registration-processor-camel-bridge------------
 
