--- a/deployment/developer/config_server/mosip_configs/application.properties
+++ b/deployment/developer/config_server/mosip_configs/application.properties
@@ -274,6 +274,7 @@ mosip.kernel.virus-scanner.port=3310
 # Name node url for HDFS - Non Secured
 #mosip.kernel.fsadapter.hdfs.name-node-url=hdfs://<IP>:<PORT>
 # Name node url for HDFS - Secured (auth enabled)
+#mosip.kernel.fsadapter.hdfs.name-node-url=hdfs://172.17.0.2:9000
 mosip.kernel.fsadapter.hdfs.name-node-url=hdfs://localhost:9000
 # Enable if hadoop security authorization is 'true', default is false
 mosip.kernel.fsadapter.hdfs.authentication-enabled=false
