--- a/deployment/developer/config_server/mosip_configs/registration-processor.properties
+++ b/deployment/developer/config_server/mosip_configs/registration-processor.properties
@@ -51,7 +51,7 @@ hibernate.jdbc.lob.non_contextual_creation=true
 hibernate.show_sql=false
 
 #-----packet-manager----------
-registration.processor.DEV_DIRECTORY=${HOME}/mosip/dmz_packet_store 
+registration.processor.DEV_DIRECTORY=${HOME}/mosip/dmz_packet_store
 registration.processor.log_directory=${HOME}/mosip/mosip-infra/deployment/developer/launcher/logs
 
 #Location to store all the uploaded file
@@ -65,7 +65,7 @@ registration.processor.LANDING_ZONE = ${registration.processor.DEV_DIRECTORY}/LA
 
 #Get ppk file for connecting vm to store the files in archive location
 #registration.processor.vm.ppk=Mosip_Private_key.ppk
-registration.processor.vm.ppk=sftpkey
+registration.processor.vm.ppk=mosipkey
 
 #---------registration-processor-camel-bridge------------
 
