Updated for latest version of platform.  Few unwanted services switched off.

--- a/deployment/developer/config_server/mosip_configs/registration-processor.properties
+++ b/deployment/developer/config_server/mosip_configs/registration-processor.properties
@@ -230,6 +230,8 @@ mosip.registration.processor.timezone=GMT
 #Packet Receiver request Id
 mosip.registration.processor.packet.id=mosip.registration.packet
 
+mosip.registration.processor.grace.period=10800
+
 #-----------Retry Stage-----------
 registration.processor.wait.period=1
 
