--- a/deployment/developer/config_server/mosip_configs/kernel.properties
+++ b/deployment/developer/config_server/mosip_configs/kernel.properties
@@ -14,7 +14,8 @@ mosip.kernel.syncdata.syncdata-version-id=v1.0
 mosip.kernel.syncdata.registration-center-config-file=registration-${spring.profiles.active}.properties
 # Name of the file that is present in the config server which has global config.
 mosip.kernel.syncdata.global-config-file=application-${spring.profiles.active}.properties
-mosip.kernel.syncdata.syncjob-base-url=http://<IP>:<PORT>/v1/syncjob/syncjobdef
+#mosip.kernel.syncdata.syncjob-base-url=http://<IP>:<PORT>/v1/syncjob/syncjobdef
+mosip.kernel.syncdata.syncjob-base-url=http://localhost:8189/v1/syncjob/syncjobdef
 
 
 #------------------------------------sms notification service-------------------------------
