syncdata properties updated

--- a/deployment/developer/config_server/mosip_configs/kernel.properties
+++ b/deployment/developer/config_server/mosip_configs/kernel.properties
@@ -11,9 +11,9 @@ mosip.kernel.syncdata.auth-user-details=/userdetails
 mosip.kernel.syncdata.syncdata-request-id=SYNCDATA.REQUEST
 mosip.kernel.syncdata.syncdata-version-id=v1.0
 # Name of the file that is present in the config server which has registration specific config.
-mosip.kernel.syncdata.registration-center-config-file=registration-${spring.profiles.active}.properties
+mosip.kernel.syncdata.registration-center-config-file=registration.properties
 # Name of the file that is present in the config server which has global config.
-mosip.kernel.syncdata.global-config-file=application-${spring.profiles.active}.properties
+mosip.kernel.syncdata.global-config-file=application.properties
 #mosip.kernel.syncdata.syncjob-base-url=http://<IP>:<PORT>/v1/syncjob/syncjobdef
 mosip.kernel.syncdata.syncjob-base-url=http://localhost:8189/v1/syncjob/syncjobdef
 
