--- a/deployment/developer/launcher/resources/nginx/nginx.conf
+++ b/deployment/developer/launcher/resources/nginx/nginx.conf
@@ -63,7 +63,10 @@ http {
             proxy_pass http://localhost:8081;
         }
         location /v1/masterdata/registrationcenter {
-            proxy_pass http://localhost:8086;
+            proxy_pass http://localhost:8186;
+        }
+        location /v1/syncdata {
+            proxy_pass http://localhost:8189;
         }
    
 
