--- a/deployment/developer/config_server/mosip_configs/registration-processor.properties
+++ b/deployment/developer/config_server/mosip_configs/registration-processor.properties
@@ -1,3 +1,4 @@
+mosip.base.url=http://localhost
 # Database Host name
 mosip.registration.processor.database.hostname=localhost
 
@@ -36,12 +37,9 @@ javax.persistence.jdbc.driver=org.postgresql.Driver
 javax.persistence.jdbc.url=jdbc:postgresql://${mosip.registration.processor.database.hostname}:${mosip.registration.processor.database.port}/mosip_regprc?currentSchema=regprc
 
 #DB user name
-#TODO: Must revert back to regprcuser
-#javax.persistence.jdbc.user=regprcuser
 javax.persistence.jdbc.user=sysadmin
 
 #DB password
-#javax.persistence.jdbc.password=Mosip@dev123
 javax.persistence.jdbc.password=Mosipadm@dev123
 
 #Hibernate properties
@@ -51,9 +49,8 @@ hibernate.jdbc.lob.non_contextual_creation=true
 hibernate.show_sql=false
 
 #-----packet-manager----------
-registration.processor.DEV_DIRECTORY=${HOME}/mosip/packet_store
-registration.processor.log_directory=${HOME}/mosip/mosip-infra/deployment/developer/launcher/logs
-
+registration.processor.DEV_DIRECTORY = ${HOME}/mosip/packet_store
+ 
 #Location to store all the uploaded file
 registration.processor.ARCHIVE_LOCATION=${registration.processor.DEV_DIRECTORY}/ARCHIVE_PACKET_LOCATION
 
@@ -62,10 +59,6 @@ registration.processor.PRINT_POSTAL_SERVICE=/home/ftp1/PRINIT_POSTAL_SERVICE
 
 #Location to store the encrypted packet in the dmz zone
 registration.processor.LANDING_ZONE = ${registration.processor.DEV_DIRECTORY}/LANDING_ZONE
-
-#Get ppk file for connecting vm to store the files in archive location
-#registration.processor.vm.ppk=Mosip_Private_key.ppk
-registration.processor.vm.ppk=sftpkey
 
 #---------registration-processor-camel-bridge------------
 
@@ -76,10 +69,10 @@ cluster.manager.file.name=hazelcast_secure.xml
 dmz.cluster.manager.file.name=hazelcast_dmz.xml
 
 #Route files corresponding to the dmz flow
-camel.dmz.active.flows.file.names=registration-processor-camel-routes-new-dmz.xml,registration-processor-camel-routes-update-dmz.xml,registration-processor-camel-routes-activate-dmz.xml,registration-processor-camel-routes-res_update-dmz.xml,registration-processor-camel-routes-deactivate-dmz.xml,registration-processor-camel-route-lost-dmz.xml
+camel.dmz.active.flows.file.names=registration-processor-camel-routes-new-dmz.xml,registration-processor-camel-routes-update-dmz.xml,registration-processor-camel-routes-activate-dmz.xml,registration-processor-camel-routes-res_update-dmz.xml,registration-processor-camel-routes-deactivate-dmz.xml,registration-processor-camel-route-lost-dmz.xml,registration-processor-camel-routes-res_reprint-dmz.xml
 
 #Route files corresponding to the secure flow
-camel.secure.active.flows.file.names=registration-processor-camel-routes-new-secure.xml,registration-processor-camel-routes-update-secure.xml,registration-processor-camel-routes-activate-secure.xml,registration-processor-camel-routes-res_update-secure.xml,registration-processor-camel-routes-deactivate-secure.xml,registration-processor-camel-route-lost-secure.xml
+camel.secure.active.flows.file.names=registration-processor-camel-routes-new-secure.xml,registration-processor-camel-routes-update-secure.xml,registration-processor-camel-routes-activate-secure.xml,registration-processor-camel-routes-res_update-secure.xml,registration-processor-camel-routes-deactivate-secure.xml,registration-processor-camel-route-lost-secure.xml,registration-processor-camel-routes-res_reprint-secure.xml
 
 #-------------TOKEN GENERATION----------------
 #Token generation request id
@@ -100,24 +93,20 @@ token.request.secretKey=mosip
 #--------Registration processor rest client API's--------------
 
 #Base url
-mosip.base.url=<BASE_URL>
+mosip.base.url={{ Registration processor base url }}
 
 #Audit Service
-AUDIT_BASE=http://localhost:8181
-AUDIT=${AUDIT_BASE}/v1/auditmanager/audits
+AUDIT=${mosip.base.url}/v1/auditmanager/audits
 
 #Auth Services
-AUTH_BASE=http://localhost:8191
-PASSWORDBASEDTOKENAPI=${AUTH_BASE}/v1/authmanager/authenticate/useridPwd
-KEYBASEDTOKENAPI=${AUTH_BASE}/v1/authmanager/authenticate/clientidsecretkey
-EMAILNOTIFIER=${mosip.base.url}/v1/emailnotifier/email/send
-TOKENVALIDATE=${AUTH_BASE}/v1/authmanager/authorize/validateToken
-GETRIDFROMUSERID=${AUTH_BASE}/v1/authmanager/rid
+PASSWORDBASEDTOKENAPI=${mosip.base.url}/v1/authmanager/authenticate/useridPwd
+KEYBASEDTOKENAPI=${mosip.base.url}/v1/authmanager/authenticate/clientidsecretkey
+TOKENVALIDATE=${mosip.base.url}/v1/authmanager/authorize/validateToken
+GETRIDFROMUSERID=${mosip.base.url}/v1/authmanager/rid
 INTERNALAUTH=${mosip.base.url}/idauthentication/v1/internal/auth
 
 #Master Data Services
-MASTER_BASE=http://localhost:8186
-MASTER=${MASTER_BASE}/v1/masterdata
+MASTER=${mosip.base.url}/v1/masterdata
 MACHINEHISTORY=${MASTER}/machineshistories
 CENTERHISTORY=${MASTER}/registrationcentershistory
 CENTERUSERMACHINEHISTORY=${MASTER}/getregistrationmachineusermappinghistory
@@ -142,6 +131,7 @@ UINGENERATOR=${mosip.base.url}/v1/uingenerator/uin
 RETRIEVEIDENTITYFROMRID=${mosip.base.url}/idrepository/v1/identity/rid
 RETRIEVEIDENTITY=${mosip.base.url}/idrepository/v1/identity/uin
 CREATEVID=${mosip.base.url}/idrepository/v1/vid
+GETUINBYVID=${mosip.base.url}/idrepository/v1/vid
 
 #BioDedupe Services
 BIODEDUPE=${mosip.base.url}/registrationprocessor/v1/bio-dedupe/biometricfile
@@ -151,20 +141,18 @@ BIODEDUPEINSERT=${mosip.base.url}/abis/v0.1/registration-processor/abis/insert
 BIODEDUPEPOTENTIAL=${mosip.base.url}/abis/v0.1/registration-processor/abis/identity
 
 #Encrypt Services
-CRYPTO_BASE=http://localhost:8187
-ENCRYPTURL=${CRYPTO_BASE}/v1/cryptomanager/encrypt
-ENCRYPTIONSERVICE=http://localhost:8188/v1/keymanager/publickey
+ENCRYPTURL=${mosip.base.url}/v1/cryptomanager/encrypt
+ENCRYPTIONSERVICE=${mosip.base.url}/v1/keymanager/publickey
 
 #Digital Signature Service
-#DIGITALSIGNATURE=${mosip.base.url}/v1/signature/sign
-DIGITALSIGNATURE=http://localhost:8192/v1/signature/sign
+DIGITALSIGNATURE=${mosip.base.url}/v1/signature/sign
 
 #Digital Signature Id
 mosip.registration.processor.digital.signature.id=io.mosip.registration.processor
 
 #--------Registration Processor Rest Client API's-----------
-DMZAUDIT=${AUDIT_BASE}/v1/auditmanager/audits
-DMZCRYPTOMANAGERDECRYPT=${CRYPTO_BASE}/v1/cryptomanager/decrypt
+DMZAUDIT=${mosip.base.url}/v1/auditmanager/audits
+DMZCRYPTOMANAGERDECRYPT=${mosip.base.url}/v1/cryptomanager/decrypt
 
 #External Service
 EISERVICE=${mosip.base.url}/registrationprocessor/v1/eis/registration-processor/external-integration-service/v1.0
@@ -188,15 +176,21 @@ registration.processor.max.retry=3
 mosip.registration.processor.registration.status.id=mosip.registration.status
 #Registration Sync Id
 mosip.registration.processor.registration.sync.id=mosip.registration.sync
+#Registration Transaction Id
+mosip.registration.processor.registration.transaction.id=mosip.registration.transaction
 #Registration Sync Version
 mosip.registration.processor.sync.version=1.0
 #Registration Status Version
 mosip.registration.processor.registration.status.version=1.0
+#Registration Transaction Version
+mosip.registration.processor.transaction.version=1.0
 
 #--------Demo Dedupe Stage---------
 application.id=REGISTRATION
-#Status for macthed records in demo dedupe stage
+#Status for matched records in demo dedupe stage
 registration.processor.demodedupe.manualverification.status=REJECTED
+#configuration parameter to disable or enable Demographic Deduplication 
+mosip.registration.processor.demographic.deduplication.enable=true
 
 #-----------Manual Verification Stage------------
 #Manual verification assignment request Id
@@ -217,6 +211,7 @@ mosip.workinghour.validation.required=true
 registration.processor.applicant.dob.format=yyyy/MM/dd
 #Internal Auth request id
 mosip.identity.auth.internal.requestid=mosip.identity.auth.internal
+registration.processor.validate.introducer=true
 
 #---------Packet Receiver Stage------------
 #Maximum file size to be upload from packet receiver
@@ -229,7 +224,7 @@ mosip.registration.processor.datetime.pattern=yyyy-MM-dd'T'HH:mm:ss.SSS'Z'
 mosip.registration.processor.timezone=GMT
 #Packet Receiver request Id
 mosip.registration.processor.packet.id=mosip.registration.packet
-
+#Request time grace period
 mosip.registration.processor.grace.period=10800
 
 #-----------Retry Stage-----------
@@ -269,15 +264,20 @@ registration.processor.dmz.server.user=puneet
 registration.processor.dmz.server.port=22
 #Packet uploader server protocol
 registration.processor.dmz.server.protocal=sftp
+#Either password or ppk file should be provided
+#registration.processor.dmz.server.password={{ DMZ password }}
+registration.processor.vm.ppk=sftpkey
 
-#---------Message Sender Stage----------------------
+#-----------Message-sender-stage-----------
 #Mapping Identity json to map with the applicant id json
 registration.processor.identityjson=RegistrationProcessorIdentity.json
 #Abis queue configuration json
-registration.processor.abis.json=RegistrationProcessorAbis_qa.json
+registration.processor.abis.json=RegistrationProcessorAbis.json
 #Demographic identity label
 registration.processor.demographic.identity=identity
 registration.processor.notification.emails=
+#create text print text file
+registration.processor.print.textfile=RegistrationProcessorPrintTextFile.json
 
 #Email subjects for success & failure scenario
 #Uin generated subject
@@ -297,15 +297,16 @@ registration.processor.updated.subject=UIN Details Updated
 #Queue username
 registration.processor.queue.username=admin
 #Queue Password
-registration.processor.queue.password=<PASSWORD>
+registration.processor.queue.password={{ queue password }}
 #Queue Url
-registration.processor.queue.url=tcp://<ID>:<PORT>
+# change it after setting up active mq
+registration.processor.queue.url=tcp://{{ activemq_address }}:{{ activemq_port }}
 #Type of the Queue
 registration.processor.queue.typeOfQueue=ACTIVEMQ
 #Print Service address
-registration.processor.queue.address = print-service-qa
+registration.processor.queue.address = print-service-{{ env_name }}
 #Post Service address
-registration.processor.queue.printpostaladdress = postal-service-qa
+registration.processor.queue.printpostaladdress = postal-service-{{ env_name }}
 
 #------------Packet Validator Stage-----------
 #Attributes to be validated in master data validation
@@ -327,29 +328,22 @@ registration.processor.document.category=IDObject_DocumentCategory_Mapping.json
 registration.processor.applicant.type=ApplicantType_Document_Mapping.json
 
 #------------Packet Generator-----------------
-#Location to store the packets in packet generator
-registration.processor.packet.generated=${registration.processor.DEV_DIRECTORY}/PACKET_GENERATED
-#Location to store the decrypted packets
-registration.processor.packet.storageLocation.decrypted =${registration.processor.packet.generated}/decrypted
-#Location to store the encrypted packets
-registration.processor.packet.storageLocation.encrypted=${registration.processor.packet.generated}/encrypted
-#Date format to validate request time
-registration.processor.packet.location.dateFormat=dd-MMM-yyyy
 #Audit request id for packet generator
 registration.processor.audit.applicationId=PACGEN
 #Audit request application name for packet generator
 registration.processor.audit.applicationName=PACKET_GENERATOR
-#Audit request hostIp for packet generator
-registration.processor.audit.hostIP=120.0.0.0
-#Audit request hostname for packet generator
-registration.processor.audit.hostName=localhost
 #Packet generator request id
 mosip.registration.processor.registration.packetgenerator.id=mosip.registration.packetgenerator
+#Uin Card RePrint request id
+mosip.registration.processor.uincard.reprint.id = mosip.uincard.reprint
 #Packet generator request version
 mosip.registration.processor.packetgenerator.version=1.0
 
 #-------------Printing Service--------------------
 mosip.registration.processor.print.service.id=mosip.registration.print
+registration.processor.unMaskedUin.length=4
+#UIN card password
+mosip.reigstration.processor.print.service.uincard.password=postalCode
 
 #--------------Reprocessor stage----------------
 
@@ -358,15 +352,15 @@ registration.processor.reprocess.fetchsize=100
 
 # The reprocessor scheduler configurations
 # The elapse time beyond which the rids will be considered for reprocessing
-registration.processor.reprocess.elapse.time=600
+registration.processor.reprocess.elapse.time=300
 # The maximum reprocess count. Beyond this the rid will not be considered for reprocessing.
-registration.processor.reprocess.attempt.count=3
+registration.processor.reprocess.attempt.count=300
 # Reprocess type
 registration.processor.reprocess.type=cron
 #schedular seconds configuration
 registration.processor.reprocess.seconds=0
 #schedular minutes configuration
-registration.processor.reprocess.minutes=0/15
+registration.processor.reprocess.minutes=0/3
 #schedular hours configuration
 registration.processor.reprocess.hours=*
 #schedular days configuration
@@ -376,17 +370,6 @@ registration.processor.reprocess.months=*
 #schedular weeks configuration
 registration.processor.reprocess.days_of_week=*
 
-#------Quality Checker Stage----------------
-#Quality threshold for applicant iris
-mosip.registration.iris_threshold=0
-#Quality threshold for applicant leftslap fingerprint
-mosip.registration.leftslap_fingerprint_threshold=80
-#Quality threshold for applicant rightslap fingerprint
-mosip.registration.rightslap_fingerprint_threshold=80
-#Quality threshold for applicant thumbs fingerprint
-mosip.registration.thumbs_fingerprint_threshold=80
-#Quality threshold for applicant face
-mosip.registration.facequalitythreshold=0
 
 #Service Ids
 #Audit request id
@@ -399,5 +382,6 @@ mosip.registration.processor.sms.id=mosip.sms.send
 mosip.registration.processor.email.id=mosip.email.send
 
 #Kernel Crypto signature
-#registration.processor.signature.isEnabled=true
 registration.processor.signature.isEnabled=false
+
+registration.processor.log_directory=${HOME}/mosip/mosip-infra/deployment/developer/launcher/logs
