--- a/deployment/developer/launcher/resources/nginx/nginx.conf
+++ b/deployment/developer/launcher/resources/nginx/nginx.conf
@@ -68,6 +68,10 @@ http {
         location /v1/syncdata {
             proxy_pass http://localhost:8189;
         }
+
+        location /v1/auditmanager {
+            proxy_pass http://localhost:8181;
+        }
    
 
 
