Updated for latest platform version.

--- a/deployment/developer/config_server/mosip_configs/kernel.properties
+++ b/deployment/developer/config_server/mosip_configs/kernel.properties
@@ -13,7 +13,8 @@ mosip.kernel.syncdata.syncdata-version-id=v1.0
 # Name of the file that is present in the config server which has registration specific config.
 mosip.kernel.syncdata.registration-center-config-file=registration.properties
 # Name of the file that is present in the config server which has global config.
-mosip.kernel.syncdata.global-config-file=application-${spring.profiles.active}.properties
+#mosip.kernel.syncdata.global-config-file=application-${spring.profiles.active}.properties
+mosip.kernel.syncdata.global-config-file=application.properties
 mosip.kernel.syncdata.syncjob-base-url=http://kernel-syncjob-service:8099/v1/syncjob/syncjobdef
 
 
