client max packet size increased

--- a/deployment/developer/launcher/resources/nginx/nginx.conf
+++ b/deployment/developer/launcher/resources/nginx/nginx.conf
@@ -26,6 +26,7 @@ http {
     tcp_nodelay         on;
     keepalive_timeout   65;
     types_hash_max_size 2048;
+    client_max_body_size 100M; 
 
     include             /etc/nginx/mime.types;
     default_type        application/octet-stream;
@@ -41,6 +42,7 @@ http {
         server_name  _;
         root         /usr/share/nginx/html;
 
+        max_clie
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
